<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="ip_inquiry">IP查询</string>
    
    <string name="id_inquiry">省份证查询</string>
     <string name="id_inquiry_prompt">输入合法身份证</string>
     <string name="inquiry">查询</string>
    <string name="id_inquiry_sex_label">性  别:</string>
    <string name="id_inquiry_brithday_label">出生时间:</string>
    <string name="id_inquiry_address_label">发证地点:</string>
    
    <string name="code_inquiry_input_hint_1">输入邮政编码或地名</string>
    <string name="code_inquiry">邮编区号查询</string>
    
    <string name="tel_num_inquiry">号码归属地</string>
    <string name="tickets_inquiry">列车时刻表</string>
    <string name="weather_inquiry">天气预报</string>
    <string name="exchange_rate_transform">货币汇率</string>
    <string name="license_plate_inquiry">车牌查询</string>
    <string name="express_delivery_inquiry">快递查询</string>
     <string name="unit_conversion">万能换算</string>
     <string name="translate_inquiry">在线翻译</string>
     <string name="calendar">万年历</string>
</resources>
