<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:text="@string/code_inquiry"
            android:textColor="#ffffffff"
            android:textSize="20.0dip" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:background="@drawable/goback_button" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/city_search_seach_frame"
                android:gravity="center_vertical"
                android:paddingBottom="3.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="3.0dip" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/city_search_seach_pic" />

                <EditText
                    android:id="@+id/editText_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1.0"
                    android:background="#00000000"
                    android:hint="@string/code_inquiry_input_hint_1"
                    android:singleLine="true"
                    android:textSize="14.0dip" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/imageViewClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/city_search_del_btn"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/inquiry_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/finish_btn_selector"
                android:text="@string/inquiry"
                android:textColor="#ffffffff" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/city_list_bg" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:divider="@drawable/divider"
                android:dividerHeight="0.5dip" />

            <TextView
                android:id="@+id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:padding="10.0dip"
                android:textColor="#ff818181"
                android:textSize="16.0dip" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>